<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vesc_ackermann</name>
  <version>0.1.0</version>
  <description>
    Translate between VESC messages and ROS ackermann and odometry messages.
  </description>

  <maintainer email="f1tenth@rtime.felk.cvut.cz">F1tenth CTU Community</maintainer>

  <author email="boulet@ll.mit.edu">Michael T. Boulet</author>
  <author email="vajnamar@fel.cvut.cz">Martin Vajnar</author>
  <author email="klapajar@fel.cvut.cz">Jaroslav Klapálek</author>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/vesc_ackermann</url>
  <url type="repository">https://github.mit.edu/racecar/racecar-iap</url>
  <url type="bugtracker">https://github.mit.edu/racecar/racecar-iap/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- depend libraries -->
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>

  <!-- depend message types -->
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>vesc_msgs</depend>

  <export>
    <index url="git@github.com:CTU-F1T/vesc.git" />
  </export>
</package>
