<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vesc_driver</name>
  <version>0.1.0</version>
  <description>
    ROS device driver for the Vedder VESC open source motor driver.

    Note: Slightly edited version with removed nodelet.
    Source: rtime:f1tenth/vesc
  </description>

  <maintainer email="f1tenth@rtime.felk.cvut.cz">F1tenth CTU Community</maintainer>

  <author email="boulet@ll.mit.edu">Michael T. Boulet</author>
  <author email="klapajar@fel.cvut.cz">Jaroslav Klapálek</author>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/vesc_driver</url>
  <url type="repository">https://github.mit.edu/racecar/vesc</url>
  <url type="bugtracker">https://github.mit.edu/racecar/vesc/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>vesc_msgs</depend>
  <depend>serial</depend>

  <export>
    <index url="git@github.com:CTU-F1T/vesc.git" />
  </export>
</package>
